tests/expectations/compiler/finalize/set_in_an_assignment_fail.out
Error [EAST0372017]: The name `result` is defined multiple times.
    --> compiler-test:11:13
     |
  10 |           let result: () = Mapping::set(amounts, addr, amount);
     |               ^^^^^^ previous definition of `result` here
  11 |           let result: u128 = Mapping::set(amounts, addr, amount);
     |               ^^^^^^ `result` redefined here
